# Face-recognition

./: .gitignore  CMakeLists.txt  README.md  face_detector.cpp  face_detector.h  main.cpp
